--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ wp-includes/
 wp-config.php
 
 wp-content/plugins/*
+!wp-content/plugins/event-calendar
 !wp-content/plugins/affstream-media
 wp-content/ai1wm-backups/
 wp-content/uploads/
