--- a/wp-content/themes/affstream/package.json
+++ b/wp-content/themes/affstream/package.json
@@ -4,22 +4,19 @@
   "description": "My WordPress Theme",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "vite build --watch"
+    "start": "vite",
+    "build": "vite build"
   },
   "author": "Ваше ім'я",
   "license": "MIT",
   "dependencies": {
     "@felte/element": "^0.5.11",
     "@felte/validator-vest": "^1.0.16",
-    "materialize-css": "^1.0.0-rc.2",
-    "vest": "^5.0.4"
+    "vest": "^5.2.7",
+    "vite-plugin-style-import": "^2.0.0"
   },
   "devDependencies": {
-    "babel-loader": "^8.0.0",
-    "vite": "^4.4.9",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.0.0"
+    "sass": "^1.70.0",
+    "vite": "^4.4.9"
   }
 }
